# Kirjoitusvirhekorjaaja

./: .coveragerc  .gitignore  README.md  pyproject.toml
docs/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md
src/: app.py  damerau_levenshtein.py  index.py  spellchecker.py  trie.py  vocabulary.py
src/static/: main.css
src/templates/: correct.html  index.html  layout.html
src/tests/: test_damerau_levenshtein.py  test_spellchecker.py  test_trie.py
